# usbdm_jmxx

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: errors.rs  lib.rs
src/usbdm/: bdm_info.rs  feedback.rs  jtag.rs  mod.rs  programmer.rs  registers.rs  usb_interface.rs
