
[package]
name = "usbdm_jmxx"
version = "0.1.0"
edition = "2021"
authors = ["Kuraga13 <tkuramshin@gmail.com>"]
description = "Base API for Usbdm JMxx Programmer"


[dependencies]
byteorder = {version = "1", features = ["i128"]}
packed_struct = "0.10.0"


[dependencies.rusb] 
git = "https://github.com/a1ien/rusb"
rev = "df483fa" #latest commit as of 08.03.2023 v0.9.1

[workspace]
members = [
    "example"

]


[workspace.dependencies.usbdm_jmxx]
path = "./"
