
[package]
name = "usbdm_jmxx"
version = "0.1.0"
edition = "2021"
authors = ["Kuraga13 <tkuramshin@gmail.com>"]
description = "Base API for Usbdm JMxx Programmer"


[dependencies]
byteorder = {version = "1", features = ["i128"]}
packed_struct = "0.10.0"


[dependencies.rusb] 
git = "https://github.com/a1ien/rusb"
rev = "2cf0949" #latest commit as of 24.04.2023 v0.9.2

[workspace]
members = [
    "example"

]


[workspace.dependencies.usbdm_jmxx]
path = "./"
