
[package]
name = "usbdm_jmxx"
version = "0.1.0"
edition = "2021"
authors = ["Kuraga13 <tkuramshin@gmail.com>"]
description = "Base API for Usbdm JMxx Programmer"


[dependencies]
byteorder = {version = "1.4.3", features = ["i128"]}
packed_struct = "0.10.1"
rusb = "0.9.3"


[workspace]
members = [
    "example"

]


[workspace.dependencies.usbdm_jmxx]
path = "./"
